packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_error_snapshots/missing_pkgname.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n\n# Missing pkgname section.\n\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 6, column 2
  |
6 | 
  |  ^
expected a pkgname section
